INSTALL_LMOD = @INSTALL_LMOD@

luadatadir = $(INSTALL_LMOD)

nobase_dist_luadata_DATA = \
	sancus/init.lua \
	sancus/model/Boolean.lua \
	sancus/model/Decimal.lua \
	sancus/model/Enum.lua \
	sancus/model/Integer.lua \
	sancus/model/Text.lua \
	sancus/model/init.lua \
	sancus/object/Class.lua \
	sancus/object/Enum.lua \
	sancus/object/Table.lua \
	sancus/object/init.lua \
	sancus/text/init.lua \
	sancus/text/xml.lua \
	sancus/utils.lua
